# improved_productivity

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.example  Dockerfile  Readme.md  build_image.py  improved_productivity.code-workspace  main.py  pyproject.toml
.github/workflows/: opend_pull_request.yaml  pull_request.yaml  push.yaml  push_tags.yaml
app/: crud.py  main.py  schemas.py  util.py
app/services/: item_service.py
tests/: test_crud.py  test_main.py  test_util.py
tests/services/: test_item_service.py
